--- a/src/main.scss
+++ b/src/main.scss
@@ -1,10 +1,47 @@
-body {
-	#main-body {
+html {
+	height: 100%;
 
-		#title {
-			text-align: center;
+	body {
+		height: inherit;
+		#main-body {
+
+			height: inherit;
+
+			h1 {
+				text-align: center;
+				font-size: 8em;
+			}
+
+			#movie-list {
+				text-align: center;
+				height: 200px;
+
+				h3{
+					font-size: 4em;
+					background-color: transparent;
+
+					&:hover {
+						cursor: pointer;
+					}
+				}
+			}
+
+			.row {
+				text-align: center;
+			
+				img {
+					height: 250px;
+					width: 250px;
+
+					margin-bottom: 10px;
+
+					&:hover {
+						cursor: pointer;
+					}
+				}
+			}
+
 		}
-
-		
 	}
+
 }
