--- a/src/main.scss
+++ b/src/main.scss
@@ -2,13 +2,28 @@ html {
 	height: 100%;
 
 	body {
+
 		height: inherit;
+
+		.navbar {
+			font-size: 2em;
+
+			.navbar-brand {
+				font-size: 1.5em;
+
+			}
+		}
+
 		#main-body {
 
 			height: inherit;
 
 			h1 {
 				text-align: center;
+				font-size: 8em;
+			}
+
+			h2 {
 				font-size: 8em;
 			}
 
@@ -19,6 +34,7 @@ html {
 				h3{
 					font-size: 4em;
 					background-color: transparent;
+									margin-top: 40px;
 
 					&:hover {
 						cursor: pointer;
@@ -33,6 +49,7 @@ html {
 					height: 250px;
 					width: 250px;
 
+					margin-top: 50px;
 					margin-bottom: 10px;
 
 					&:hover {
@@ -44,4 +61,45 @@ html {
 		}
 	}
 
+}
+
+.container #title {
+	text-align: center;
+}
+
+#image-header {
+	display: none;
+	margin-top: 50px;
+	h3{
+		font-size: 3em;
+	}
+
+}
+
+.nacho-libre {
+	display: none;
+}
+
+.star-wars {
+	display: none;
+}
+
+.move-image {
+	position: relative;
+	-webkit-animation-name: move-image;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-iteration-count: 1;
+	animation-name: move-image;
+	animation-duration: 1s;
+	animation-iteration-count: 1;	
+}
+
+@-webkit-keyframes move-image {
+	0% {left: 0px;}
+	100% {left: 500px;}
+}
+
+@keyframes move-image {
+	0% {left: 0px;}
+	100% {left: 500px;}
 }
